2017-04-13  Alan Modra  <amodra@gmail.com>

	PR 20946
	* desc-cpu.scm (lookup_mach_via_bfd_name): Return NULL if the name
	could not be matched.
	(@arch@_cgen_cpu_open): Allow for lookup_mach_via_bfd_name returning
	NULL.

2017-04-08  Alan Modra  <amodra@gmail.com>

	* utils.scm: Update emitted copyright dates.

2016-07-18  Trevor Saunders <tbsaunde@tbsaunde.org>

	* desc-cpu.scm, opc-itab.sbm: Emit extern "C" { ... } wrappers to
	make generated code usable by C++.

2016-05-09  Stafford Horne  <shorne@gmail.com>

	* cgen/sim-cpu.scm (cgen-semantics.c, cgen-sem-switch.c): Rename
	TRACE_RESULT to CGEN_TRACE_RESULT.
	* cgen/sim-model.scm (gen-cpu-imp-properties): Rename
	SIM_MACH_IMP_PROPERTIES to SIM_MACH_IMP_PROPERTIES.
	(gen-mach-model-table): Rename MODEL to SIM_MODEL.
	(gen-mach-defns): Rename MACH to SIM_MACH.
	* cgen/sim.scm (op-gen-set-trace, op-gen-set-trace-parallel): Rename
	TRACE_RESULT to CGEN_TRACE_RESULT.
	(gen-mach-decls, gen-mach-data): Rename MACH to SIM_MACH.

2016-04-22  Alan Modra  <amodra@gmail.com>

	* utils.scm: Update emitted copyright dates.

2016-04-14  Trevor Saunders  <tbsaunde@tbsaunde.org>

	* opc-itab.scm (asm_hash_insn_p): Stop using old style arguments.
	(dis_hash_insn_p): Likewise.
	(asm_hash_insn): Likewise.
	(dis_hash_insn): Likewise.
	* opc-opinst.scm (@arch@_cgen_init_opinst_table): Likewise.

2016-03-02  Alan Modra  <amodra@gmail.com>

	* enum.scm (gen-enum-decl): Emit large numbers as hex.  Tidy
	start-sanitize.  Upcase just the identifiers.

2014-05-19  Peter Gavin  <pgavin@gmail.com>

        * sim-arch.scm (WI, UWI, AI, IAI): Define.
        * rtl-c.scm (mul-o1flag, mul-o2flag, rem): New.
        * rtx-funcs.scn (mul-o1flag, mul-o2flag, rem): New.

2012-12-17  Nick Clifton  <nickc@redhat.com>

	* AUTHORS: Add copyright notice.
	* INSTALL: Likewise.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* co-for-gen-all: Likewise.
	* configure.in: Likewise.
	* gen-all: Likewise.
	* gen-all-desc: Likewise.
	* gen-all-doc: Likewise.